--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
     "compilerOptions": {
         "esModuleInterop": true,
+        "paths": {
+            "types/*": [
+              "./@types/*"
+            ]
+          }
     }
 }
