--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "npx ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "lint": "tslint --project .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +22,7 @@
     "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.8",
     "dotenv": "^16.4.5",
+    "nodemon": "^3.1.0",
     "tslint": "^6.1.3",
     "typescript": "^5.4.5"
   }
