--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.1.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.5",
     "pg-promise": "^11.6.0"
   },
